--- a/contacto.html
+++ b/contacto.html
@@ -12,7 +12,9 @@
     <!--La segunda forma  para referenciar es haciendo uso de las librerias descargadas en nuestro pc -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <!-- Para que haga uso de los estilos propios se agrega como cualquier hoja de estilo-->
-    <link rel="stylesheet" href="/css/main.css">
+    <!-- <link rel="stylesheet" href="/css/main.css"> -->
+    <!-- Se hace cambio en la direccion del archivo para generar el css con sass -->
+    <link rel="stylesheet" href="/css/styles.css">
 
     <!-- Libreria para los iconos -->
     <link rel="stylesheet" href="node_modules/open-iconic/font/css/open-iconic-bootstrap.min.css">
