Se añade estilos con Less

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Para que haga uso de los estilos propios se agrega como cualquier hoja de estilo-->
     <!-- <link rel="stylesheet" href="/css/main.css"> -->
     <!-- Se hace cambio en la direccion del archivo para generar el css con sass -->
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/styles2.css">
     
     <!-- Libreria para los iconos -->
     <link rel="stylesheet" href="node_modules/open-iconic/font/css/open-iconic-bootstrap.min.css">
