--- a/contacto.html
+++ b/contacto.html
@@ -9,7 +9,8 @@
     <!-- Forma referencia desde un lugar publico, tipo CDN -->
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">  -->
 
-    <!-- build:css dist/contacto.css-->
+    <!-- Anteriorbuild:css dist/index.css-->
+    <!-- build:css css/index.css-->
 
     <!--La segunda forma  para referenciar es haciendo uso de las librerias descargadas en nuestro pc -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
@@ -157,13 +158,19 @@
 		</div>
 	</footer>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <!-- build:js dist/contacto.js-->
+    <!-- Anteriorbuild:js dist/index.js-->
+    <!-- build:js js/main.js-->
+
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <!-- endbuild -->
+
+    <!-- <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script> -->
+
+    <!--Scrip para que funcione el tooltip -->
+    <script src="js/index.js"></script>
+    
+	<!-- endbuild -->
 
   </body>
 </html>
