--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <!-- Forma referencia desde un lugar publico, tipo CDN -->
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">  -->
 
-    <!-- build:css dist/index.css-->
+    <!-- Anteriorbuild:css dist/index.css-->
+    <!-- build:css css/index.css-->
 
     <!--La segunda forma  para referenciar es haciendo uso de las librerias descargadas en nuestro pc -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
@@ -294,7 +295,8 @@
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 
-    <!-- build:js dist/index.js-->
+    <!-- Anteriorbuild:js dist/index.js-->
+    <!-- build:js js/main.js-->
 
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
@@ -303,38 +305,7 @@
     <!-- <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script> -->
 
     <!--Scrip para que funcione el tooltip -->
-    <script>
-    	$(function(){
-    		$("[data-toggle='tooltip']").tooltip();
-    		//Scrip para que funcione el popovers
-    		$("[data-toggle='popover']").popover();
-    		$('.carousel').carousel({
-    			interval: 6000
-    		});
-    		//Si se utiliza " " doble por fuera por dentro hay que utilizar ' ' o viceversa
-    		//Creacion de modal para btn
-    		$('#contactoBtn').on('show.bs.modal', function(e){
-    			//cuando se dispara el evento, generalmente esa ejecución del evento viene con un objeto, que engloba los datos relacionados con el evento. El objeto seria e
-    			console.log('El modal se esta mostrando');
-    			$('#contBtn').prop('disabled', true);
-    			$('#contBtn').removeClass('btn-info');
-				$('#contBtn').addClass('btn-success');
-    		});
-    		$('#contactoBtn').on('shown.bs.modal', function(e){
-    			console.log('El modal se mostro');
-    		});
-    		$('#contactoBtn').on('hide.bs.modal', function(e){
-    			console.log('El modal se esta ocultando');
-    		});
-    		$('#contactoBtn').on('hidden.bs.modal', function(e){
-    			console.log('El modal se ocultó');
-    			$('#contBtn').prop('disabled', false);
-    			$('#contBtn').removeClass('btn-success');
-				$('#contBtn').addClass('btn-info');
-    		});
-
-    	});
-    </script>
+    <script src="js/index.js"></script>
     
 	<!-- endbuild -->
 
